--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   hive: ^2.2.3
+  syncfusion_flutter_charts: ^26.2.5+1
+  hive_flutter: ^1.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,6 +80,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: 's'
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
