--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   syncfusion_flutter_charts: ^26.2.5+1
   hive_flutter: ^1.1.0
   intl: ^0.19.0
+  gap: ^3.0.1
+  remixicon: ^1.2.0
 
 dev_dependencies:
   flutter_test:
